Fixed the contrast issue with fonts

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -85,6 +85,7 @@
   img {
     max-width: 175px;
     border-radius: 50%;
+    margin: auto;
 
     @include breakpoint($large) {
       padding: 5px;
@@ -110,6 +111,7 @@
 
 .author__name {
   margin: 0;
+  text-align: center;
 
   @include breakpoint($large) {
     margin-top: 10px;
@@ -123,6 +125,7 @@
 
 .author__bio {
   margin: 0;
+  text-align: center;
 
   @include breakpoint($large) {
     margin-top: 10px;
